chg cloud build for use env

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,20 +1,22 @@
 steps:
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "build",
-        "-t",
-        "southamerica-west1-docker.pkg.dev/ms-products-launcher/image-registry/orders-ms",
-        "-f",
-        "dockerfile.prod",
-        "--platform=linux/amd64",
-        ".",
-      ]
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "push",
-        "southamerica-west1-docker.pkg.dev/ms-products-launcher/image-registry/orders-ms",
-      ]
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+      docker build -t southamerica-west1-docker.pkg.dev/ms-products-launcher/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+  secretEnv: ['DATABASE_URL']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    [
+      'push',
+      'southamerica-west1-docker.pkg.dev/ms-products-launcher/image-registry/orders-ms',
+    ]
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/860138656178/secrets/ORDERS_DATABASE_URL/versions/1
+    env: 'DATABASE_URL'
 options:
   logging: CLOUD_LOGGING_ONLY
